Add description for TreeMap and how to run TreeMapSample in Java 17